Adição de uma imagem para o header

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
     <div class="imgHeader" id="inicio">
       <picture>
-        <img id="img" src="assets/header.jpg" alt="" />
+        <img id="img" src="assets/Header.jpg" alt="" />
       </picture>
     </div>
 
@@ -108,7 +108,8 @@
         </p>
 
         <p>
-          <i class="fa-solid fa-phone"></i> <strong>CONTATO</strong><br />(27) 98902-5190
+          <i class="fa-solid fa-phone"></i> <strong>CONTATO</strong><br />
+          (27) 98902-5190
         </p>
       </div>
     </footer>
